codigo atualizado